Add forgotten slider option

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <button id="rainbow-button"><span class="rainbow-text">Rainbow</span></button>
         <button id="eraser-button">Eraser</button>
         <button id="clear-button">Clear</button>
+        <div class="slider">
+        <input type="range" min="1" max="100" value="1" class="slider" id="gridNum"> 
+        <span id="numPerSide"></span>
+        </div>
     </div>
     <div id="sketchpad">
     </div>
