--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button id="eraser-button">Eraser</button>
         <button id="clear-button">Clear</button>
         <div class="slider">
-        <input type="range" min="1" max="100" value="1" class="slider" id="gridNum"> 
+        <input type="range" min="1" max="100" value="1" id="gridNum"> 
         <span id="numPerSide"></span>
         </div>
     </div>
